# plures-object

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: copilot-pr-lifecycle.yml
crates/chunkstore/: Cargo.toml
crates/chunkstore/src/: lib.rs
crates/manifest/: Cargo.toml
crates/manifest-db/: Cargo.toml
crates/manifest-db/src/: lib.rs
crates/manifest/src/: lib.rs
crates/object-core/: Cargo.toml
crates/object-core/src/: lib.rs
crates/object-http/: Cargo.toml
crates/object-http/src/: error.rs  handlers.rs  lib.rs  xml.rs
crates/object-http/tests/: integration.rs
crates/object-store/: Cargo.toml
crates/object-store/src/: lib.rs
crates/stream/: Cargo.toml
crates/stream/src/: lib.rs
docs/: ROADMAP.md
