[workspace]
resolver = "2"
members = [
    "crates/object-core",
    "crates/chunkstore",
    "crates/manifest",
    "crates/manifest-db",
    "crates/object-store",
    "crates/stream",
    "crates/object-http",
]

[workspace.package]
version = "0.7.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/plures/plures-object"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "2"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
bytes = "1"
futures = "0.3"
axum = { version = "0.8", features = ["tokio"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tempfile = "3"
