[package]
name = "plures-chunkstore"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
plures-object-core = { path = "../object-core" }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tempfile = "3"
