[package]
name = "plures-manifest-db"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PluresDB-backed graph-native manifest storage for plures-object"

[dependencies]
plures-object-core = { path = "../object-core" }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
