[package]
name = "plures-manifest"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
plures-object-core = { path = "../object-core" }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
