[package]
name = "plures-object-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
